--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,4 +39,5 @@
     <dimen name="dimens153dp">153dp</dimen>
     <dimen name="dimens175dp">175dp</dimen>
     <dimen name="dimens3dp">3dp</dimen>
+    <dimen name="dimens61dp">61dp</dimen>
 </resources>
