--- a/app/src/main/res/layout/screen_search.xml
+++ b/app/src/main/res/layout/screen_search.xml
@@ -10,6 +10,7 @@
     android:padding="@dimen/dimens18dp">
 
     <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_widget"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/search_rectangle"
@@ -30,6 +31,7 @@
         android:textColor="#230EA5"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/search_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:listitem="@layout/search_screen_item"
