--- a/app/src/main/res/layout/item_today_tomorrow.xml
+++ b/app/src/main/res/layout/item_today_tomorrow.xml
@@ -19,7 +19,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/hour_for_every_hours"
                     android:textSize="@dimen/dimens16sp"
-                    android:layout_marginEnd="@dimen/dimens40dp"
+                    android:layout_marginEnd="@dimen/dimens32dp"
                     android:fontFamily="@font/inter"
                     android:textColor="@color/blue_text"/>
 
@@ -28,7 +28,7 @@
                     android:layout_width="@dimen/dimens40dp"
                     android:layout_height="wrap_content"
                     android:src="@drawable/sun"
-                    android:layout_marginEnd="@dimen/dimens40dp"
+                    android:layout_marginEnd="@dimen/dimens32dp"
                     android:contentDescription="@string/sun" />
 
                 <TextView
@@ -37,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/grade_for_every_hours"
                     android:textSize="@dimen/dimens20sp"
-                    android:layout_marginEnd="@dimen/dimens40dp"
+                    android:layout_marginEnd="@dimen/dimens32dp"
                     android:fontFamily="@font/inter"
                     android:textStyle="bold"
                     android:textColor="@color/black"/>
@@ -64,9 +64,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/dimens40dp"
-                    android:src="@drawable/arrow"
-                    android:rotation="180"/>
+                    android:layout_marginStart="@dimen/dimens32dp"
+                    android:rotation="180"
+                    android:src="@drawable/arrow" />
 
         </LinearLayout>
 
