--- a/app/src/main/res/layout/screen_search.xml
+++ b/app/src/main/res/layout/screen_search.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimens22dp"
         android:text="@string/recent_researches"
-        android:visibility="visible"
+        android:visibility="gone"
         android:textSize="@dimen/dimens15sp"
         android:textColor="#230EA5"/>
 
