--- a/app/src/main/res/layout/screen_home.xml
+++ b/app/src/main/res/layout/screen_home.xml
@@ -20,9 +20,10 @@
         android:layout_marginBottom="@dimen/dimens22dp"/>
 
     <include
+        android:id="@+id/home_today"
         layout="@layout/home_screen_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dimens342dp"
+        android:layout_height="@dimen/dimens155dp"
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/dimens32dp"/>
 
