--- a/app/src/main/res/layout/screen_tomorrow.xml
+++ b/app/src/main/res/layout/screen_tomorrow.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter"
         android:layout_marginTop="@dimen/dimens20dp"
-        android:text="Sereno"
+        android:text="@string/clear"
         android:textColor="@color/blue_text"
         android:layout_marginStart="@dimen/dimens24dp"
         android:layout_marginEnd="@dimen/dimens24dp"
