added wind direction

--- a/app/src/main/res/layout/screen_today.xml
+++ b/app/src/main/res/layout/screen_today.xml
@@ -54,7 +54,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/todayTomorrowRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dimens16dp"
         android:layout_marginStart="@dimen/dimens24dp"
