--- a/app/src/main/res/layout/item_today_tomorrow.xml
+++ b/app/src/main/res/layout/item_today_tomorrow.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimens48dp"
             android:gravity="center_vertical"
+            android:layout_marginEnd="@dimen/dimens10dp"
             android:orientation="horizontal">
 
                 <TextView
@@ -181,10 +182,22 @@
                     android:fontFamily="@font/inter"/>
 
                 <TextView
-                    android:id="@+id/cardWindVal"
+                    android:id="@+id/cardWindDirectionVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_dimens198dp"
+                    android:layout_marginTop="@dimen/dimens106dp"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/dimens16sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/inter"/>
+
+                <TextView
+                    android:id="@+id/cardWindVal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="233dp"
                     android:layout_marginTop="@dimen/dimens106dp"
                     android:text="@string/wind_speed"
                     android:textColor="@color/black"
