--- a/app/src/main/res/layout/screen_tomorrow.xml
+++ b/app/src/main/res/layout/screen_tomorrow.xml
@@ -30,7 +30,7 @@
         android:fontFamily="@font/inter" />
 
     <TextView
-        android:id="@+id/today_titleDate"
+        android:id="@+id/tomorrow_titleDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/today_date"
