--- a/app/src/main/res/layout/item_today_tomorrow.xml
+++ b/app/src/main/res/layout/item_today_tomorrow.xml
@@ -60,7 +60,7 @@
                     android:fontFamily="@font/inter"
                     android:text="@string/humidity_for_every_hours"
                     android:textColor="@color/black"
-                    android:layout_marginEnd="@dimen/dimens20dp"
+                    android:layout_marginEnd="@dimen/dimens30dp"
                     android:textSize="@dimen/dimens20sp" />
 
                 <ImageView
@@ -120,7 +120,7 @@
                     android:id="@+id/cardUv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_dimens198dp"
+                    android:layout_marginStart="@dimen/dimens198dp"
                     android:layout_marginTop="@dimen/dimens18dp"
                     android:text="@string/UV"
                     android:textColor="@color/black"
@@ -131,7 +131,7 @@
                     android:id="@+id/cardUvVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_dimens198dp"
+                    android:layout_marginStart="@dimen/dimens198dp"
                     android:layout_marginTop="@dimen/dimens36dp"
                     android:text="@string/card_UV"
                     android:textColor="@color/black"
@@ -174,7 +174,7 @@
                     android:id="@+id/cardWind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_dimens198dp"
+                    android:layout_marginStart="@dimen/dimens198dp"
                     android:layout_marginTop="@dimen/dimens84dp"
                     android:text="@string/wind"
                     android:textColor="@color/black"
@@ -185,7 +185,7 @@
                     android:id="@+id/cardWindDirectionVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_dimens198dp"
+                    android:layout_marginStart="@dimen/dimens198dp"
                     android:layout_marginTop="@dimen/dimens106dp"
                     android:text=""
                     android:textColor="@color/black"
@@ -197,7 +197,7 @@
                     android:id="@+id/cardWindVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="233dp"
+                    android:layout_marginStart="@dimen/dimens233dp"
                     android:layout_marginTop="@dimen/dimens106dp"
                     android:text="@string/wind_speed"
                     android:textColor="@color/black"
@@ -241,7 +241,7 @@
                     android:id="@+id/cardRain"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_dimens198dp"
+                    android:layout_marginStart="@dimen/dimens198dp"
                     android:layout_marginTop="@dimen/dimens153dp"
                     android:fontFamily="@font/inter"
                     android:text="@string/rain"
@@ -252,7 +252,7 @@
                     android:id="@+id/cardRainVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_dimens198dp"
+                    android:layout_marginStart="@dimen/dimens198dp"
                     android:layout_marginTop="@dimen/dimens175dp"
                     android:text="@string/rain_cm"
                     android:textColor="@color/black"
