--- a/app/src/main/res/layout/screen_search.xml
+++ b/app/src/main/res/layout/screen_search.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/search_fragment"
     android:background="@color/screen_search_background_color"
     tools:context=".features.search.SearchScreen"
     android:orientation="vertical"
