--- a/app/src/main/res/layout/screen_today.xml
+++ b/app/src/main/res/layout/screen_today.xml
@@ -42,6 +42,7 @@
             android:fontFamily="@font/inter" />
 
         <TextView
+            android:id="@+id/weather_condition_for_now"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter"
