--- a/app/src/main/res/layout/fragment_error.xml
+++ b/app/src/main/res/layout/fragment_error.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_light_grey"
-    tools:context="features.error_message.ErrorView">
+    tools:context=".features.ui.error_message.ErrorView">
 
     <LinearLayout
         android:orientation="vertical"
