--- a/app/src/main/res/layout/screen_search.xml
+++ b/app/src/main/res/layout/screen_search.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/search_fragment"
     android:background="@color/screen_search_background_color"
-    tools:context=".features.search.SearchScreen"
+    tools:context=".features.ui.search.SearchScreen"
     android:orientation="vertical"
     android:padding="@dimen/dimens18dp">
 
