--- a/app/src/main/res/layout/screen_tomorrow.xml
+++ b/app/src/main/res/layout/screen_tomorrow.xml
@@ -9,7 +9,7 @@
         android:id="@+id/today_titleCity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/city"
+        android:text=""
         android:textSize="@dimen/dimens16sp"
         android:textColor="@color/blue_text"
         android:layout_marginTop="@dimen/dimens61dp"
@@ -33,7 +33,7 @@
         android:id="@+id/tomorrow_titleDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/today_date"
+        android:text=""
         android:textColor="@color/blue_text"
         android:layout_marginStart="@dimen/dimens24dp"
         android:layout_marginEnd="@dimen/dimens24dp"
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter"
         android:layout_marginTop="@dimen/dimens20dp"
-        android:text="@string/clear"
+        android:text=""
         android:textColor="@color/blue_text"
         android:layout_marginStart="@dimen/dimens24dp"
         android:layout_marginEnd="@dimen/dimens24dp"
