I deleted the useless string values

--- a/app/src/main/res/layout/item_today_tomorrow.xml
+++ b/app/src/main/res/layout/item_today_tomorrow.xml
@@ -22,7 +22,7 @@
                     android:layout_width="@dimen/dimens50dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter"
-                    android:text="@string/hour_for_every_hours"
+                    android:text=""
                     android:layout_marginEnd="@dimen/dimens20dp"
                     android:textColor="@color/blue_text"
                     android:textSize="@dimen/dimens16sp" />
@@ -40,7 +40,7 @@
                     android:layout_width="@dimen/dimens50dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter"
-                    android:text="@string/grade_for_every_hours"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens20sp"
                     android:layout_marginEnd="@dimen/dimens20dp"
@@ -58,7 +58,7 @@
                     android:layout_width="@dimen/dimens40dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter"
-                    android:text="@string/humidity_for_every_hours"
+                    android:text=""
                     android:textColor="@color/black"
                     android:layout_marginEnd="@dimen/dimens30dp"
                     android:textSize="@dimen/dimens20sp" />
@@ -110,7 +110,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimens18dp"
                     android:layout_marginTop="@dimen/dimens36dp"
-                    android:text="@string/grade_perceived"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
                     android:textStyle="bold"
@@ -133,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimens198dp"
                     android:layout_marginTop="@dimen/dimens36dp"
-                    android:text="@string/card_UV"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
                     android:textStyle="bold"
@@ -164,7 +164,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimens18dp"
                     android:layout_marginTop="@dimen/dimens106dp"
-                    android:text="@string/humidity_percentage"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
                     android:textStyle="bold"
@@ -199,7 +199,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimens240dp"
                     android:layout_marginTop="@dimen/dimens106dp"
-                    android:text="@string/wind_speed"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
                     android:textStyle="bold"
@@ -231,7 +231,7 @@
                     android:layout_marginStart="@dimen/dimens18dp"
                     android:layout_marginTop="@dimen/dimens175dp"
                     android:layout_marginBottom="@dimen/dimens18dp"
-                    android:text="@string/cover_percentage"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
                     android:textStyle="bold"
@@ -254,7 +254,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimens198dp"
                     android:layout_marginTop="@dimen/dimens175dp"
-                    android:text="@string/rain_cm"
+                    android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
                     android:textStyle="bold"
