--- a/app/src/main/res/layout/home_screen_item.xml
+++ b/app/src/main/res/layout/home_screen_item.xml
@@ -15,7 +15,7 @@
         android:id="@+id/current_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="today"
+        android:text="@string/today"
         android:textAppearance="@style/oggi"
         android:gravity="top"
         android:layout_marginStart="@dimen/dimens18dp"
@@ -82,7 +82,7 @@
         android:layout_width="@dimen/dimens50dp"
         android:layout_height="@dimen/dimens50dp"
         android:src="@drawable/wc_sun"
-        android:contentDescription="@string/sample_weather_icon"
+        android:contentDescription="@string/sun"
         android:layout_marginStart="@dimen/dimens18dp"
         android:layout_marginTop="@dimen/dimens89dp"/>
 
