--- a/app/src/main/res/layout/item_today_tomorrow.xml
+++ b/app/src/main/res/layout/item_today_tomorrow.xml
@@ -7,112 +7,93 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center">
+    android:layout_gravity="center">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/info"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimens50dp"
-            android:padding="@dimen/dimens3dp"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingVertical="@dimen/dimens5dp"
             android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/hour_item"
-                    android:layout_width="@dimen/dimens50dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="" 
+                    android:text=""
                     android:textColor="@color/blue_text"
                     android:textSize="@dimen/dimens16sp" />
 
                 <ImageView
                     android:id="@+id/weather_image_item"
-                    android:layout_width="@dimen/dimens40dp"
-                    android:layout_height="@dimen/dimens40dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:contentDescription="@string/sun"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/hour_item"
-                    app:layout_constraintEnd_toStartOf="@id/grade_item"
+                    android:scaleType="centerInside"
                     android:src="@drawable/sun" />
 
                 <TextView
                     android:id="@+id/grade_item"
-                    android:layout_width="@dimen/dimens50dp"
+                    android:layout_width="@dimen/dimens20dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter"
                     android:text=""
                     android:textColor="@color/black"
+                    android:layout_weight="1"
                     android:textSize="@dimen/dimens20sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/weather_image_item"
-                    app:layout_constraintEnd_toStartOf="@id/group_humidity"
                     android:textStyle="bold" />
-
-                <LinearLayout
-                    android:id="@+id/group_humidity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    app:layout_constraintStart_toEndOf="@id/grade_item"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/arrow_cardView">
 
                 <ImageView
                     android:id="@+id/drop"
-                    android:layout_width="@dimen/dimens27dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:contentDescription="@string/drop"
-                    android:src="@drawable/fluent_drop_16_filled"/>
-
+                    android:layout_weight="0"
+                    android:src="@drawable/fluent_drop_16_filled" />
 
                 <TextView
                     android:id="@+id/humidity_percentage_item"
-                    android:layout_width="@dimen/dimens40dp"
+                    android:layout_width="@dimen/dimens20dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/inter"
                     android:text=""
+                    android:layout_weight="0.5"
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens20sp" />
 
-                </LinearLayout>
-
                 <ImageView
                     android:id="@+id/arrow_cardView"
-                    android:layout_width="@dimen/dimens40dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:rotation="180"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_weight="1"
                     android:src="@drawable/arrow" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/vector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:scaleType="fitXY"
+            android:layout_gravity="center"
+            android:visibility="visible"
             android:src="@drawable/vector_1" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimens213dp"
-            android:layout_marginVertical="@dimen/dimens24dp"
-            android:layout_marginHorizontal="@dimen/dimens24dp"
             app:cardBackgroundColor="@color/iceCardView"
+            android:layout_marginVertical="@dimen/dimens18dp"
+            android:layout_marginHorizontal="@dimen/dimens3dp"
             app:cardElevation="@dimen/dimens5dp"
-            app:cardMaxElevation="@dimen/dimens5dp"
+            app:cardMaxElevation="@dimen/dimens10dp"
             app:cardCornerRadius="@dimen/dimens10dp"
             android:visibility="gone"
             android:background="@color/black">
@@ -132,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimens18dp"
-                    android:layout_marginTop="@dimen/dimens36dp"
+                    android:layout_marginTop="@dimen/dimens38dp"
                     android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
@@ -143,7 +124,7 @@
                     android:id="@+id/cardUv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens198dp"
+                    android:layout_marginStart="@dimen/dimens190dp"
                     android:layout_marginTop="@dimen/dimens18dp"
                     android:text="@string/UV"
                     android:textColor="@color/black"
@@ -154,8 +135,8 @@
                     android:id="@+id/cardUvVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens198dp"
-                    android:layout_marginTop="@dimen/dimens36dp"
+                    android:layout_marginStart="@dimen/dimens190dp"
+                    android:layout_marginTop="@dimen/dimens38dp"
                     android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
@@ -197,7 +178,7 @@
                     android:id="@+id/cardWind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens198dp"
+                    android:layout_marginStart="@dimen/dimens190dp"
                     android:layout_marginTop="@dimen/dimens84dp"
                     android:text="@string/wind"
                     android:textColor="@color/black"
@@ -208,9 +189,9 @@
                     android:id="@+id/cardWindDirectionVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens198dp"
+                    android:layout_marginStart="@dimen/dimens190dp"
                     android:layout_marginTop="@dimen/dimens106dp"
-                    android:text=""
+                    android:text="@string/WSW"
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
                     android:textStyle="bold"
@@ -220,13 +201,13 @@
                     android:id="@+id/cardWindVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens240dp"
+                    android:layout_marginStart="@dimen/dimens238dp"
                     android:layout_marginTop="@dimen/dimens106dp"
+                    android:fontFamily="@font/inter"
                     android:text=""
                     android:textColor="@color/black"
                     android:textSize="@dimen/dimens16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inter"/>
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -264,7 +245,7 @@
                     android:id="@+id/cardRain"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens198dp"
+                    android:layout_marginStart="@dimen/dimens190dp"
                     android:layout_marginTop="@dimen/dimens153dp"
                     android:fontFamily="@font/inter"
                     android:text="@string/rain"
@@ -275,7 +256,7 @@
                     android:id="@+id/cardRainVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens198dp"
+                    android:layout_marginStart="@dimen/dimens190dp"
                     android:layout_marginTop="@dimen/dimens175dp"
                     android:text=""
                     android:textColor="@color/black"
@@ -285,3 +266,6 @@
         </androidx.cardview.widget.CardView>
 
 </LinearLayout>
+
+
+
